# WordleSolver

./: CMakeLists.txt  README.md
example/: CMakeLists.txt  main.cpp
include/: CMakeLists.txt
include/graph/: entropy.h  graph.h  process.h  word.h
src/: CMakeLists.txt  dict.txt  entropy.cpp  graph.cpp  process.cpp  test1.cpp  words.txt
